# ai-ready

./: .gitignore  01_v2_mastering_individual_calls.pptx  AI_Design_Projects_2026.md  SETUP.md  SYLLABUS.md  about.html  assessments.html  coming_soon.html  header.html  index.html  main.py  prompt_style_examples.md  pyproject.toml  scripts.js  style.css  syllabus.html  tool_calling_slides.pptx  ttest_standard_error.pptx
labs/: lecture-style.css
playground/: accuracy_estimator.html  bootstrap_lab.html  convolution_of_independent_random_variables.html  distribution_explorer.html  domain_variance.html  index.html  judges_and_compounding.html  llm_evolution.html  metric_choice.html  multiple_hypothesis_testing.html  (+3 more)
wazzup/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
wazzup/docs/: DEMO.md  MODEL.md
wazzup/examples/: add_user.py  remove_user.py  seed.py
wazzup/tests/: conftest.py  test_access_control.py  test_agents.py  test_conversations.py  test_deletion.py  test_dms.py  test_e2e.py  test_logging.py  test_mcp.py  test_messages.py  test_models.py  test_rels.py  test_schema.py  test_topics.py  test_users.py  tests.md
wazzup/ui/: app.js  index.html  style.css
wazzup/wazzup/: __init__.py  db.py  llm.py  logging_setup.py  models.py
wazzup/wazzup/api/: __init__.py  agents.py  conversations.py  deletion.py  messages.py  rels.py  slugs.py  topics.py  users.py
wazzup/wazzup/http/: __init__.py  auth.py  conversations.py  dependencies.py  dms.py  main.py  messages.py  rels.py  topics.py  users.py
wazzup/wazzup/mcp/: __init__.py  server.py
(+320 files in other folders)
