[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wazzup"
version = "0.1.0"
description = "Small chat app where humans and AI users share one model"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "openai>=1.40",
    "httpx>=0.27", # used by FastAPI's TestClient and by examples
    "pytest>=9.0.3",
    "mcp>=1.0",                # FastMCP server (lesson 3): wraps api/ as MCP tools
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
include = ["wazzup*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]   # Python warnings become test failures (section 12)

[tool.coverage.run]
branch = true
source = ["wazzup"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "B",     # flake8-bugbear
    "S110",  # try-except-pass (no silent failures)
    "BLE001",# broad except Exception
    "T201",  # print statements
    "I",     # isort
]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = false   # flip to true once typing is consistent
ignore_missing_imports = true
